Orchestration/dev/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devboard
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: abhishekchauhandev/devboard-backend:v1.4
        ports:
        - containerPort: 8080
