Orchestration/dev/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: devboard
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: abhishekchauhandev/devboard-frontend:v1.4
        resources:
          requests:
            memory: "200Mi"
            cpu: "200m"
          limits:
            memory: "400Mi"
            cpu: "300m"
        ports:
        - containerPort: 4173
