Orchestration/dev/nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
  namespace: devboard
  labels:
    app: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: nginx-proxy
        image: nginx:1.30.4
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
            cpu: "200m"
        command: ["/docker-entrypoint.sh"]    
        args:
        - nginx
        - -g
        - "daemon off;"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: "/etc/nginx/conf.d/default.conf"
          subPath: nginx.conf
          readOnly: true 
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
