Orchestration/dev/nginx2.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx2
  name: nginx2
  namespace: devboard
spec:
  containers:
  - image: nginx
    name: nginx2
    resources:
      requests:
        memory: "500Mi"
        cpu: "100m"
      limits:
        memory: "1Gi"
        cpu: "300m"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
