Orchestration/dev/postgres-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: devboard
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-scripts
          mountPath: "/docker-entrypoint-initdb.d"
          readOnly: true
        - mountPath: "/var/lib/postgresql/data"
          name: data  
      volumes:
      - name: db-scripts
        configMap:
          name: db-scripts
      - name: data
        persistentVolumeClaim:
          claimName: devboard-pvc
