Orchestration/dev/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: devboard
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 4173
      nodePort: 30001
