Orchestration/dev/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  namespace: devboard
spec:
  selector:
    app: proxy
  ports:
    - port: 8082
      targetPort: 80
