Orchestration/dev/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: devboard
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
